[package]
name = "fluentai-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
rustc-hash.workspace = true
parking_lot.workspace = true
bumpalo.workspace = true
tracing.workspace = true
crossbeam.workspace = true
crossbeam-deque = "0.8"
libc.workspace = true
num_cpus = "1.16"
web-time = "1.1.0"

[dev-dependencies]
criterion.workspace = true
proptest = "1.4"

[features]
default = []
# Enable AI-driven AST analysis features
ai-analysis = []
# Enable Burn backend for AI analysis (requires ai-analysis)
ai-analysis-burn = ["ai-analysis", "burn"]
# Enable ONNX backend for AI analysis (requires ai-analysis)
ai-analysis-onnx = ["ai-analysis", "ort"]

[dependencies.burn]
version = "0.13"
optional = true
default-features = false
features = ["std", "ndarray"]

[dependencies.ort]
version = "2.0.0-rc.2"
optional = true